--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
+    <script src="site.js" defer></script>
 </head>
 <body>
     <header>
@@ -28,6 +29,7 @@
             <li>Black Panther</li>
             <li>Superman</li>
             <li>Demon Slayer</li>
+            <li>Spiderman</li>
         </ul>
     </aside>
 
