--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             I like assembling computers and working out.</p>
         </div>
     </section>
+
+    <div id="carousel">
+        <img alt="Image 1">
+        <img alt="Image 2">
+        <img alt="Image 3">
+    </div>
+        <div id="buttons">
+        <button id="prev">Previous</button>
+        <button id="next">Next</button>
+    </div>
+
     <aside>
         <h2>Favorite Movies</h2>
         <ul>
