--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             <li>Spiderman</li>
         </ul>
     </aside>
+    <div>
+        <ul class="todo-list">
+    <!-- List items will go here -->
+</ul>
+
+<input type="text" id="new-todo" placeholder="Add a new item">
+<button type="button" id="addButton">Add To Do</button>
+
+    </div>
 
     <footer>
         <div ><p></p></div>
