--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <button type="button" id="addButton">Add To Do</button>
 
     </div>
+    <div class="pokemon">
+    </div>
 
     <footer>
         <div ><p></p></div>
